新增：依赖添加，分类